--- a/pays.html
+++ b/pays.html
@@ -59,7 +59,7 @@ padding: 6px 20px;
           <img src="Paymentsuccessful21.png" alt="">
       </div>
      <div class="form-group">
-                <button class="ilo"> <a href="sample.html"> Home</a></button>
+                <button class="ilo"> <a href="index.html"> Home</a></button>
             </div>
             </form>
       </div>
