--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
                     <li><a href="#">HOME</a></li>
                     <li><a href="aboutus.html">ABOUT</a></li>
                     <li><a href="courses.html">COURSES</a></li>
-                    <li><a href="#">PLACEMENTS</a></li>
-                    <li><a href="contact.html">CONTACT</a></li>
+                     <li><a href="contact.html">CONTACT</a></li>
+                   <li><a href="frames.html">Frame</a></li>
                 </ul>
             </div>
 
