--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
                    <li><a href="frames.html">Frame</a></li>
                 </ul>
             </div>
+            <p> Welcome</p>
 
             <div class="search">
                 <input class="srch" type="search" name="" placeholder="Type To text">
